--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "webpack-pratice",
+  "name": "odin-todos-",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
- "build": "webpack --config webpack.prod.js",
- "dev": "webpack serve --config webpack.dev.js",
- "deploy": "git subtree push --prefix dist origin gh-pages"
+    "build": "webpack --config webpack.prod.js",
+    "dev": "webpack serve --config webpack.dev.js",
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "keywords": [],
   "author": "",
